@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version <next>:
 - compand audio filter
 - shuffleplanes filter
+- Silicon Graphics RLE 8-bit video decoder
 
 
 version 10:
